Fix bug #69832 (Assertion failure)